# marvelous-databricks-course-StijnBrakkee

./: databricks.yml  project_config.yml  pyproject.toml
.github/: CODEOWNERS
notebooks/: 01.process_data.py  02.train_register_custom_model.py  03.deploy_model_serving_endpoint.py  05.1.create_monitoring_table.py  05.2.create_alert.py  merktrouw-0.0.1-py3-none-any.whl  merktrouw-0.1.4-py3-none-any.whl
scripts/: 01.process_data.py  02.train_register_custom_model.py  03.deploy_model.py
src/merktrouw/: config.py  data_processor.py  monitoring.py
src/merktrouw/models/: custom_merktrouw_model.py
